--- a/Week02/BullsEye/BullsEye/Base.lproj/Main.storyboard
+++ b/Week02/BullsEye/BullsEye/Base.lproj/Main.storyboard
@@ -80,6 +80,9 @@
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="25" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="iAf-Xz-bBv">
                                 <rect key="frame" x="57" y="111" width="456" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="sliderDidMove:" destination="BYZ-38-t0r" eventType="valueChanged" id="l7i-As-Hix"/>
+                                </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygL-t6-6Ap">
                                 <rect key="frame" x="43" y="115" width="8" height="21"/>
