--- a/Week02/RevBullsEye/RevBullsEye/Base.lproj/Main.storyboard
+++ b/Week02/RevBullsEye/RevBullsEye/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="landscape" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,11 +12,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RevBullsEye" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Guess where the slider is:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pkL-EE-8xM">
-                                <rect key="frame" x="20" y="20" width="547" height="30"/>
+                                <rect key="frame" x="20" y="20" width="215" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="txQ-BE-EX8"/>
                                 </constraints>
@@ -25,7 +25,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hGc-na-rdS">
-                                <rect key="frame" x="20" y="70" width="627" height="30"/>
+                                <rect key="frame" x="20" y="70" width="335" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QjN-l4-Xeu">
                                         <rect key="frame" x="0.0" y="0.0" width="8" height="30"/>
@@ -33,11 +33,11 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="rBd-xb-af0">
-                                        <rect key="frame" x="14" y="0.0" width="578.5" height="31"/>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="rBd-xb-af0">
+                                        <rect key="frame" x="14" y="0.0" width="286.5" height="31"/>
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vgd-qS-Iqs">
-                                        <rect key="frame" x="598.5" y="0.0" width="28.5" height="30"/>
+                                        <rect key="frame" x="306.5" y="0.0" width="28.5" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -49,36 +49,42 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnu-8V-9iz">
-                                <rect key="frame" x="310.5" y="120" width="46" height="30"/>
+                                <rect key="frame" x="164.5" y="120" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Alf-d1-Vom"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="showAlert" destination="BYZ-38-t0r" eventType="touchUpInside" id="hMA-KF-rBz"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6A-gn-ICr">
-                                <rect key="frame" x="20" y="325" width="71" height="30"/>
+                                <rect key="frame" x="20" y="617" width="71" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="vKA-5L-HzW"/>
                                 </constraints>
                                 <state key="normal" title="Start Over"/>
+                                <connections>
+                                    <action selector="startNewGame" destination="BYZ-38-t0r" eventType="touchUpInside" id="3BX-aF-KxA"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6n6-42-UjS">
-                                <rect key="frame" x="622" y="325" width="25" height="30"/>
+                                <rect key="frame" x="330" y="617" width="25" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="y7t-bo-VPP"/>
                                 </constraints>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rlf-wI-fVV">
-                                <rect key="frame" x="587" y="20" width="60" height="30"/>
+                                <rect key="frame" x="255" y="20" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="iEa-tR-4Iq"/>
-                                    <constraint firstAttribute="width" constant="60" id="lPq-G8-f18"/>
+                                    <constraint firstAttribute="width" constant="100" id="lPq-G8-f18"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3Zj-PD-BIE">
-                                <rect key="frame" x="241.5" y="325" width="184.5" height="30"/>
+                                <rect key="frame" x="95.5" y="617" width="184.5" height="30"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="oB4-bt-Gtd">
                                         <rect key="frame" x="0.0" y="0.0" width="96.5" height="30"/>
@@ -142,6 +148,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="guessTextField" destination="rlf-wI-fVV" id="qRP-jZ-KdG"/>
+                        <outlet property="roundLabel" destination="P0V-Uk-rRK" id="8bf-vM-uic"/>
+                        <outlet property="scoreLabel" destination="ITW-4h-5CM" id="czo-Oq-2RV"/>
+                        <outlet property="slider" destination="rBd-xb-af0" id="wTv-JT-AAP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
