--- a/Week02/RevBullsEye/RevBullsEye/Base.lproj/Main.storyboard
+++ b/Week02/RevBullsEye/RevBullsEye/Base.lproj/Main.storyboard
@@ -49,11 +49,11 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnu-8V-9iz">
-                                <rect key="frame" x="164.5" y="120" width="46" height="30"/>
+                                <rect key="frame" x="162.5" y="120" width="50" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Alf-d1-Vom"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Hit Me!"/>
                                 <connections>
                                     <action selector="showAlert" destination="BYZ-38-t0r" eventType="touchUpInside" id="hMA-KF-rBz"/>
                                 </connections>
