--- a/Week05/Birdie/Birdie-Final/View/Base.lproj/Main.storyboard
+++ b/Week05/Birdie/Birdie-Final/View/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,6 +30,132 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="N0R-IK-WeJ">
                                 <rect key="frame" x="0.0" y="134.5" width="414" height="761.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="postcell" rowHeight="174" id="D6F-bZ-tEi" customClass="PostCell" customModule="Birdie_Final" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="174"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="D6F-bZ-tEi" id="zew-dO-led">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="174"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mascot_swift-badge" translatesAutoresizingMaskIntoConstraints="NO" id="7MB-NA-kYK">
+                                                    <rect key="frame" x="28" y="19" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="PwF-rd-AKl"/>
+                                                        <constraint firstAttribute="width" secondItem="7MB-NA-kYK" secondAttribute="height" multiplier="1:1" id="xdi-m3-huI"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="axo-5W-uF2">
+                                                    <rect key="frame" x="96" y="19" width="290" height="49"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hgf-Ld-PV7">
+                                                            <rect key="frame" x="0.0" y="0.0" width="290" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fk0-Tl-eNM">
+                                                            <rect key="frame" x="0.0" y="28.5" width="290" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message goes here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lzu-Xh-2Lc">
+                                                    <rect key="frame" x="28" y="87" width="358" height="68"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="axo-5W-uF2" firstAttribute="leading" secondItem="7MB-NA-kYK" secondAttribute="trailing" constant="8" id="15X-o2-bpx"/>
+                                                <constraint firstItem="axo-5W-uF2" firstAttribute="top" secondItem="zew-dO-led" secondAttribute="topMargin" constant="8" id="5oB-VU-MQH"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="lzu-Xh-2Lc" secondAttribute="trailing" constant="8" id="AcB-Nc-0iD"/>
+                                                <constraint firstItem="axo-5W-uF2" firstAttribute="height" secondItem="7MB-NA-kYK" secondAttribute="height" multiplier="0.816667" id="Iqn-jF-Otf"/>
+                                                <constraint firstItem="7MB-NA-kYK" firstAttribute="leading" secondItem="zew-dO-led" secondAttribute="leadingMargin" constant="8" id="Tr8-2q-GRJ"/>
+                                                <constraint firstItem="lzu-Xh-2Lc" firstAttribute="top" secondItem="7MB-NA-kYK" secondAttribute="bottom" constant="8" id="Vu9-pv-g1O"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="axo-5W-uF2" secondAttribute="trailing" constant="8" id="aYD-0H-nL5"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="lzu-Xh-2Lc" secondAttribute="bottom" constant="8" id="cVP-fh-AC3"/>
+                                                <constraint firstItem="7MB-NA-kYK" firstAttribute="top" secondItem="zew-dO-led" secondAttribute="topMargin" constant="8" id="pvn-qS-E62"/>
+                                                <constraint firstItem="lzu-Xh-2Lc" firstAttribute="leading" secondItem="zew-dO-led" secondAttribute="leadingMargin" constant="8" id="ws9-sa-4Xw"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageLabel" destination="lzu-Xh-2Lc" id="mix-vU-I2L"/>
+                                            <outlet property="senderLabel" destination="Hgf-Ld-PV7" id="HFa-8R-IEX"/>
+                                            <outlet property="timestampLabel" destination="Fk0-Tl-eNM" id="UqY-f0-PlG"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="imagecell" rowHeight="372" id="QaH-Ax-UHS" customClass="ImagePostCell" customModule="Birdie_Final" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="202" width="414" height="372"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QaH-Ax-UHS" id="Yd2-bo-Jd7">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="372"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mascot_swift-badge" translatesAutoresizingMaskIntoConstraints="NO" id="qCr-r8-RPR">
+                                                    <rect key="frame" x="28" y="19" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="1Uw-Le-8hK"/>
+                                                        <constraint firstAttribute="width" secondItem="qCr-r8-RPR" secondAttribute="height" multiplier="1:1" id="syn-9q-wRT"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pUf-xb-ZCR">
+                                                    <rect key="frame" x="96" y="19" width="290" height="49"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GA3-UA-d9A">
+                                                            <rect key="frame" x="0.0" y="0.0" width="290" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kZp-lj-dib">
+                                                            <rect key="frame" x="0.0" y="28.5" width="290" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message goes here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8u-Tt-bYl">
+                                                    <rect key="frame" x="28" y="87" width="358" height="58"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="xbu-p0-yvz">
+                                                    <rect key="frame" x="28" y="154" width="358" height="197.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="200" id="yg7-HN-ywJ"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="A8u-Tt-bYl" firstAttribute="top" secondItem="qCr-r8-RPR" secondAttribute="bottom" constant="8" id="3gn-N6-p9W"/>
+                                                <constraint firstItem="pUf-xb-ZCR" firstAttribute="top" secondItem="Yd2-bo-Jd7" secondAttribute="topMargin" constant="8" id="FRH-gS-t6J"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="xbu-p0-yvz" secondAttribute="trailing" constant="8" id="MUy-uD-nte"/>
+                                                <constraint firstItem="pUf-xb-ZCR" firstAttribute="height" secondItem="qCr-r8-RPR" secondAttribute="height" multiplier="0.816667" id="NQf-uB-PUY"/>
+                                                <constraint firstItem="xbu-p0-yvz" firstAttribute="top" secondItem="A8u-Tt-bYl" secondAttribute="bottom" constant="8" id="OY8-dq-KeI"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="pUf-xb-ZCR" secondAttribute="trailing" constant="8" id="WDb-YX-5rh"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="A8u-Tt-bYl" secondAttribute="trailing" constant="8" id="dkb-8b-Pea"/>
+                                                <constraint firstItem="A8u-Tt-bYl" firstAttribute="leading" secondItem="Yd2-bo-Jd7" secondAttribute="leadingMargin" constant="8" id="efL-K9-ejb"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="xbu-p0-yvz" secondAttribute="bottom" constant="8" id="jnj-0B-CXU"/>
+                                                <constraint firstItem="qCr-r8-RPR" firstAttribute="leading" secondItem="Yd2-bo-Jd7" secondAttribute="leadingMargin" constant="8" id="n8t-qV-nX4"/>
+                                                <constraint firstItem="xbu-p0-yvz" firstAttribute="leading" secondItem="Yd2-bo-Jd7" secondAttribute="leadingMargin" constant="8" id="rnf-hu-YYe"/>
+                                                <constraint firstItem="qCr-r8-RPR" firstAttribute="top" secondItem="Yd2-bo-Jd7" secondAttribute="topMargin" constant="8" id="s9t-7B-V31"/>
+                                                <constraint firstItem="pUf-xb-ZCR" firstAttribute="leading" secondItem="qCr-r8-RPR" secondAttribute="trailing" constant="8" id="zk4-eZ-Jam"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageImageView" destination="xbu-p0-yvz" id="Dl0-r5-jey"/>
+                                            <outlet property="messageLabel" destination="A8u-Tt-bYl" id="l4b-Cb-ZjO"/>
+                                            <outlet property="senderLabel" destination="GA3-UA-d9A" id="yeb-d2-gtf"/>
+                                            <outlet property="timestampLabel" destination="kZp-lj-dib" id="hpB-1U-LkT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="127" translatesAutoresizingMaskIntoConstraints="NO" id="YOd-7A-7lt">
                                 <rect key="frame" x="0.0" y="96.5" width="414" height="30"/>
@@ -78,5 +204,6 @@
     </scenes>
     <resources>
         <image name="mascot_swift-badge" width="1000" height="1000"/>
+        <image name="photo" catalog="system" width="128" height="93"/>
     </resources>
 </document>
